# LittlePaimon

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
utils/: patch.py
